tests/lean/doSeqRightIssue.lean.expected.out
doSeqRightIssue.lean:5:24-5:25: error: unknown universe level 'v'
